--- a/village-readers.html
+++ b/village-readers.html
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="col-md-3 team-left-top">
-          <img src="images/men-1.jpg">
+          <img src="images/kiki.jpg">
           <div class="team-left-bottom">
             <h4>Empathic Tarot</h4>
             <P>By Kiki</P>
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div class="col-md-3 team-left-top">
-          <img src="images/men-1.jpg">
+          <img src="images/rainstar.jpg">
           <div class="team-left-bottom">
             <h4>Birth Chart Readings</h4>
             <P>By Rainstar</P>
