--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <!-- About  ================================================== -->
 <div class="row" id="about-row">
   <div class="col-md-10 col-md-offset-1">
-    <div class="col-md-8" id="client-quote">
+    <div class="col-md-8" class="client-quote">
       <!-- <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p> -->
       <p>"Sheila's visionary skills have repeatedly transformed the rattiest, greasiest, crumbling interiors into a place of light, color and joy that is admired by every person through the door. Her taste in colors, textures and space were honed over decades of research. Constantly in the planning phase, she'll convert the tiniest space into a glorious sun room for plants, or a mere window sill is revolutionized into a roost for your bird.
       Her revolutionary creativity also supports environmental causes.
