updates during meeting with sheila

--- a/business-consulting.html
+++ b/business-consulting.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
       <a id="main-header" href="#">
         <h1 class="header" id="headline">Sheila Baraga</h1>
-        <h3 class="header" id="subline">Design &amp; Business Consulting</h3>
+        <h3 class="header" id="subline">Design &amp; Consulting</h3>
       </a>
       <nav id="myNav" class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
@@ -71,7 +71,11 @@
       <div class="video">
        <iframe src="https://player.vimeo.com/video/38621491?title=0&amp;byline=0&amp;portrait=0" width="1100" height="619" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
       </div>
-
+      <div class="client-quote">
+      <!-- <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p> -->
+      <p>"Sheila. thank you so much for your opinions...  Working with you was very clarifying for our nearer-term strategy for our -----  property.  Being informed ...is very important knowledge and it is now obvious we need to move away from this concept to live more consistently with our intended life style preferences."</p>
+      <h3 id="client-sig">John &amp; Lisann</h3>
+    </div>
 
 <!-- Footer  ================================================== -->
     <footer>
@@ -79,7 +83,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h3 id="footer-name">Sheila Baraga</h3>
-            <h5 id="footer-title">Design &amp; Business Consulting</h5>
+            <h5 id="footer-title">Design &amp; Consulting</h5>
             <ul id="footer-navigation" class="nav nav-pills nav-justified">
               <li><a class="footer-nav-li" href="index.html">Home</a></li>
               <li><a class="footer-nav-li" href="about.html">About</a></li>
