--- a/village-readers.html
+++ b/village-readers.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
       <a id="main-header" href="#">
         <h1 class="header" id="headline">Sheila Baraga</h1>
-        <h3 class="header" id="subline">Design &amp; Business Consulting</h3>
+        <h3 class="header" id="subline">Design &amp; Consulting</h3>
       </a>
       <nav id="myNav" class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
@@ -55,27 +55,29 @@
     <div class="container">
       <div class="team-gallery-top">
         <h3>Village Readers Collective</h3>
-        <p>Village Readers Collective is made up of talented and wonderful healers & fortune tellers. The readers can be seen by appointment at our lovely little shop on SE 16th and Stark at 512 se 16th Avenue. The readers will help you gain insight into your life path, help you make decisions at a crossroads or help you set goals for your future. These warm and loving readers and intuitives are available by appointment by calling me at 503.318.8338. I’m happy to answer any questions you may have. I think you’ll be very happy you gave it a try.</p>
+        <p>Village Readers Collective is made up of talented and wonderful healers & fortune tellers. The readers can be seen by appointment at our lovely little shop on SE 16th and Stark at 512 se 16th Avenue. The readers will help you gain insight into your life path, help you make decisions at a crossroads or help you set goals for your future. These warm and loving readers and intuitives are available by appointment by calling me at 503-318-8338. I’m happy to answer any questions you may have. I think you’ll be very happy you gave it a try.</p>
       </div>
         <div class="col-md-3 team-left-top">
-          <img src="images/rhonda.jpg">
+          <img src="images/rhonda1.jpg">
           <div class="team-left-bottom">
             <h4>Traditional Tarot</h4>
             <P>By Rhonda Kennedy</P>
             <div class="bton">
              <!--<div id = "showdiv0" style="display:none;">Nothing Yet!</div>-->
-              <a id = "more"  href="#" onclick="showHideCode()">MORE</a>
+             <p><a href="mailto:rhondalini@yahoo.com" target="_top">Send Email</a></p>
+              <!-- <a id = "more"  href="#" onclick="showHideCode()">MORE</a> -->
             </div>
           </div>
         </div>
         <div class="col-md-3 team-left-top">
-          <img src="images/shannon.jpg">
+          <img src="images/shannon1.jpg">
           <div class="team-left-bottom">
             <h4>Psychic Readings</h4>
             <P>By Dr. Shannon Brown</P>
             <div class="bton">
               <!--<div id = "showdiv1" style="display:none;">Nothing Yet!</div>-->
-              <a id = "more" href="#" onclick="showHideCode()">MORE</a>
+              <p><a href="mailto:sb@dr-brown.com" target="_top">Send Email</a></p>
+              <!-- <a id = "more" href="#" onclick="showHideCode()">MORE</a> -->
             </div>
           </div>
         </div>
@@ -86,18 +88,20 @@
             <P>By Fern Capella</P>
             <div class="bton">
               <!--<div id = "showdiv2" style="display:none;">Nothing Yet!</div>-->
-              <a id = "more" href="#" onclick="showHideCode()">MORE</a>
+              <p><a href="mailto:ferncapella@gmail.com" target="_top">Send Email</a></p>
+              <!-- <a id = "more" href="#" onclick="showHideCode()">MORE</a> -->
             </div>
           </div>
         </div>
         <div class="col-md-3 team-left-top">
-          <img src="images/cris.jpg">
+          <img src="images/cris1.jpg">
           <div class="team-left-bottom">
             <h4>Energy Healings</h4>
             <P>By Cris Chapman</P>
             <div class="bton">
               <!--<div id = "showdiv3" style="display:none;">Nothing Yet!</div>-->
-              <a id = "more" href="#" onclick="showHideCode()">MORE</a>
+              <p><a href="mailto:crischaperson@gmail.com" target="_top">Send Email</a></p>
+              <!-- <a id = "more" href="#" onclick="showHideCode()">MORE</a> -->
             </div>
           </div>
         </div>
@@ -108,7 +112,8 @@
             <P>By Kiki</P>
             <div class="bton">
               <!--<div id = "showdiv4" style="display:none;">Nothing Yet!</div>-->
-              <a id = "more" href="#" onclick="showHideCode()">MORE</a>
+              <p><a href="mailto:ya.goodlife@gmail.com" target="_top">Send Email</a></p>
+              <!-- <a id = "more" href="#" onclick="showHideCode()">MORE</a> -->
             </div>
           </div>
         </div>
@@ -119,18 +124,20 @@
             <P>By Rainstar</P>
             <div class="bton">
               <!--<div id = "showdiv5" style="display:none;">Nothing Yet!</div>-->
-              <a id = "more" href="#" onclick="showHideCode()">MORE</a>
+              <p><a href="mailto:astrochats@gmail.com" target="_top">Send Email</a></p>
+              <!-- <a id = "more" href="#" onclick="showHideCode()">MORE</a> -->
             </div>
           </div>
         </div>
         <div class="col-md-3 team-left-top">
-          <img src="images/gabrielle.jpg">
+          <img src="images/gabrielle1.jpg">
           <div class="team-left-bottom">
             <h4>Intuitive Readings</h4>
             <P>By Gabrielle Renee</P>
             <div class="bton">
               <!--<div id = "showdiv6" style="display:none;">Nothing Yet!</div>-->
-              <a id = "more" href="#" href = "showHideCode()">MORE</a>
+              <p><a href="mailto:rocketgirl.infinity@gmail.com" target="_top">Send Email</a></p>
+              <!-- <a id = "more" href="#" href = "showHideCode()">MORE</a> -->
             </div>
           </div>
         </div>
@@ -151,7 +158,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h3 id="footer-name">Sheila Baraga</h3>
-            <h5 id="footer-title">Design &amp; Business Consulting</h5>
+            <h5 id="footer-title">Design &amp; Consulting</h5>
             <ul id="footer-navigation" class="nav nav-pills nav-justified">
               <li><a class="footer-nav-li" href="index.html">Home</a></li>
               <li><a class="footer-nav-li" href="about.html">About</a></li>
