--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
       <a id="main-header" href="#">
         <h1 class="header" id="headline">Sheila Baraga</h1>
-        <h3 class="header" id="subline">Design &amp; Business Consulting</h3>
+        <h3 class="header" id="subline">Design &amp; Consulting</h3>
       </a>
       <nav id="myNav" class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
@@ -56,7 +56,7 @@
 <div class="row" id="about-row">
   <div class="col-md-10 col-md-offset-1">
     <div class="col-sm-4" id="about-pic">
-      <img id="sheila-pic" src="images/Sheilapic.jpg">
+      <img id="sheila-pic" src="images/Sheila1.jpg">
     </div>
     <div class="col-sm-8">
       <h1 class="about-sig">Sheila Blay Baraga</h1>
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h3 id="footer-name">Sheila Baraga</h3>
-            <h5 id="footer-title">Design &amp; Business Consulting</h5>
+            <h5 id="footer-title">Design &amp; Consulting</h5>
             <ul id="footer-navigation" class="nav nav-pills nav-justified">
               <li><a class="footer-nav-li" href="index.html">Home</a></li>
               <li><a class="footer-nav-li" href="about.html">About</a></li>
