--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
       <a id="main-header" href="#">
         <h1 class="header" id="headline">Sheila Baraga</h1>
-        <h3 class="header" id="subline">Design &amp; Business Consulting</h3>
+        <h3 class="header" id="subline">Design &amp; Consulting</h3>
       </a>
       <nav id="myNav" class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
@@ -69,9 +69,9 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img class="picshar" src="images/Restaurant1.jpg" alt="#">
+            <img class="picshar" src="images/color-consulting.jpg" alt="Color Consulting">
             <div class="carousel-caption" id="textcolor">
-              2925 SE Belmont Interior
+              Color Consulting
             </div>
           </div>
           <div class="item">
@@ -81,15 +81,21 @@
             </div>
           </div>
           <div class="item">
-            <img class="picshar" src="images/Restaurant4.jpg" alt="#">
+            <img class="picshar" src="images/affordable-remodels.jpg" alt="Affordable Remodels">
             <div class="carousel-caption" id="textcolor">
-              Morrison Empire Room
+              Affordable Remodels
             </div>
           </div>
           <div class="item">
-            <img class="picshar" src="images/Restaurant2.jpg" alt="#">
+            <img class="picshar" src="images/exteriors.jpg" alt="Exteriors">
             <div class="carousel-caption" id="textcolor">
-              Morrison Empire Room
+              Exteriors
+            </div>
+          </div>
+          <div class="item">
+            <img class="picshar" src="images/garage-to-adu-conversion.jpg" alt="Garage to ADU Conversion">
+            <div class="carousel-caption" id="textcolor">
+              Exteriors
             </div>
           </div>
           <!--<div class="item">
@@ -151,7 +157,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h3 id="footer-name">Sheila Baraga</h3>
-            <h5 id="footer-title">Design &amp; Business Consulting</h5>
+            <h5 id="footer-title">Design &amp; Consulting</h5>
             <ul id="footer-navigation" class="nav nav-pills nav-justified">
               <li><a class="footer-nav-li" href="index.html">Home</a></li>
               <li><a class="footer-nav-li" href="about.html">About</a></li>
