--- a/project-management.html
+++ b/project-management.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
       <a id="main-header" href="#">
         <h1 class="header" id="headline">Sheila Baraga</h1>
-        <h3 class="header" id="subline">Design &amp; Business Consulting</h3>
+        <h3 class="header" id="subline">Design &amp; Consulting</h3>
       </a>
       <nav id="myNav" class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
@@ -69,8 +69,8 @@
       <div class="client-quote">
       <!-- <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p> -->
       <p>"You are an AMAZING project manager and I will highly recommend you to anyone who asks! You have such incredible patience and attention to detail, care and concern for the project and the people involved, a wonderful array of contacts to work with, and are able to listen to and take in all of the many (and often quite nebulous and unformed) ideas and opinions of all concerned.  In short, dear Sheila, you are a treasure and I look forward to working with you again when we arrive [back in the States]. I already have a little list started. :-)"</p>
-      <h3 id="client-sig">LeeAnn Gauthier</h3>
-      <a href="www.portlandparalegal.com"><h5>CEO, Portland Paralegal Services</h5></a>
+      <h3 id="client-sig">Roberta (&amp; Jerry)</h3>
+      <h5>Currently living in Hong Kong, retiring to Portland</h5>
     </div>
 
   <!--video><div class="contact" id="contact">
@@ -84,7 +84,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h3 id="footer-name">Sheila Baraga</h3>
-            <h5 id="footer-title">Design &amp; Business Consulting</h5>
+            <h5 id="footer-title">Design &amp; Consulting</h5>
             <ul id="footer-navigation" class="nav nav-pills nav-justified">
               <li><a class="footer-nav-li" href="index.html">Home</a></li>
               <li><a class="footer-nav-li" href="about.html">About</a></li>
