--- a/index.html
+++ b/index.html
@@ -68,32 +68,32 @@
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img class="picshar" src="images/color-consulting.jpg" alt="Color Consulting">
+          <div class="item picshar active">
+            <img src="images/color-consulting.jpg" alt="Color Consulting">
             <div class="carousel-caption" id="textcolor">
               Color Consulting
             </div>
           </div>
-          <div class="item">
-            <img class="picshar" src="images/Restaurant3.jpg" alt="#">
+          <div class="item picshar">
+            <img src="images/Restaurant3.jpg" alt="#">
             <div class="carousel-caption">
               2925 SE Belmont Exterior
             </div>
           </div>
-          <div class="item">
-            <img class="picshar" src="images/affordable-remodels.jpg" alt="Affordable Remodels">
+          <div class="item picshar">
+            <img src="images/affordable-remodels.jpg" alt="Affordable Remodels">
             <div class="carousel-caption" id="textcolor">
               Affordable Remodels
             </div>
           </div>
-          <div class="item">
-            <img class="picshar" src="images/exteriors.jpg" alt="Exteriors">
+          <div class="item picshar">
+            <img src="images/exteriors.jpg" alt="Exteriors">
             <div class="carousel-caption" id="textcolor">
               Exteriors
             </div>
           </div>
-          <div class="item">
-            <img class="picshar" src="images/garage-to-adu-conversion.jpg" alt="Garage to ADU Conversion">
+          <div class="item picshar">
+            <img src="images/garage-to-adu-conversion.jpg" alt="Garage to ADU Conversion">
             <div class="carousel-caption" id="textcolor">
               Exteriors
             </div>
