edits to contact

--- a/index.html
+++ b/index.html
@@ -75,12 +75,6 @@
             </div>
           </div>
           <div class="item picshar">
-            <img src="images/Restaurant3.jpg" alt="#">
-            <div class="carousel-caption">
-              2925 SE Belmont Exterior
-            </div>
-          </div>
-          <div class="item picshar">
             <img src="images/affordable-remodels.jpg" alt="Affordable Remodels">
             <div class="carousel-caption" id="textcolor">
               Affordable Remodels
@@ -95,7 +89,7 @@
           <div class="item picshar">
             <img src="images/garage-to-adu-conversion2.jpg" alt="Garage to ADU Conversion">
             <div class="carousel-caption" id="textcolor">
-              Exteriors
+              Garage to ADU Conversion
             </div>
           </div>
           <!--<div class="item">
