--- a/contact.html
+++ b/contact.html
@@ -110,16 +110,16 @@
       <div id="Contact" class="contact">
   <div class="container">
     <div class="content_middle_bottom">
-          <h3 class="tz-title-3">Get In Touch</h3>
-      <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+          <h3 class="tz-title-3">Let's create something fabulous together.</h3>
+      <!-- <p class="body-text">I can help with that! Let's create something fabulous together.</p> -->
     </div>
     <div class="col-sm-8 grid_2">
-       <h3>Say hello!</h3>
+       <h3>Say Hello!</h3>
          <form action="//formspree.io/10088587@qq.com" method="POST">
        <input type="text" class="text" name="name" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}">
-       <input type="text" class="text" name="_replyto" value="email address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}">
+       <input type="text" class="text" name="_replyto" value="Email Address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email Address';}">
        <textarea value="Message" name="name"  type="submit" onfocus="this.value= '';" onblur="if (this.value == '') {this.value = 'Message';}">Message</textarea>
-       <input name="submit" type="submit" value="Send Message">
+       <input name="submit" type="submit" id="formButton" value="Send Message">
       </form>
       </div>
     <div class="col-sm-4 map">
