--- a/about.html
+++ b/about.html
@@ -56,12 +56,13 @@
 <div class="row" id="about-row">
   <div class="col-md-10 col-md-offset-1">
     <div class="col-sm-4" id="about-pic">
-      <img id="sheila-pic" src="images/Sheila1.jpg">
+      <img id="sheila-pic-about" src="images/Sheila1.jpg">
     </div>
-    <div class="col-sm-8">
+    <div id="about-text" class="col-sm-8">
       <h1 class="about-sig">Sheila Blay Baraga</h1>
-      <p>Deadlights jack lad schooner scallywag dance the hempen jig carouser broadside cable strike colors. Bring a spring upon her cable holystone blow the man down spanker Shiver me timbers to go on account lookout wherry doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to.</p>
-      <p>Prow scuttle parrel provost Sail ho shrouds spirits boom mizzenmast yardarm. Pinnace holystone mizzenmast quarter crow's nest nipperkin grog yardarm hempen halter furl. Swab barque interloper chantey doubloon starboard grog black jack gangway rutters.</p>
+      <p>Raised on the road as a daughter of a handsome and charismatic military man.   Sheila, along with her 4 siblings (to be 6 in total) went from coast to coast chasing one adventure after another.   With a very kind and patient mother, life in transit wasn’t a world of turmoil but more of a band of gypsies going from camp to camp, organized and compact. Trying to create home in an every changing landscape brought to her buckets full of resourcefulness and the ability to 'make a silk purse out of a sow's ear.'</p>
+      <p>Renovating houses through the 1980s in Denver (both as a contractor and Real Estate Broker) with her company Washington Park Realty was fun..but not quite fulfilling her need to create community.  So in 1990, she moved to Portland to build her forever home and to create businesses that would invite interaction and make real life connections between people.</p>
+      <p>Twenty one years of building these neighborhood bars &amp; restaurants were challenging and exciting and fulfilling.  But, as her beautiful daughter, Addie began to grow up, she needed more flexibility and also wanted to really be of service to others. She bought a run down boarding house in the Buckman Neighborhood of Inner Southeast and built the 16th Ave Walkups. After 5 years of creating home for interns and visiting scholars and creatives, she is dedicating the next career phase to helping other people make THEIR dreams come true. From doing Project Management for Residential renovations to Business Consulting for small businesses, Sheila fills a void where there is needed that unique combination of business savvy and professionalism with a lot of heart.</p>
     </div>
   </div>
 </div>
