--- a/village-readers.html
+++ b/village-readers.html
@@ -55,7 +55,7 @@
     <div class="container">
       <div class="team-gallery-top">
         <h3>Village Readers Collective</h3>
-        <p>Village Readers Collective is made up of talented and wonderful healers & fortune tellers. The readers can be seen by appointment at our lovely little shop on SE 16th and Stark at 512 se 16th Avenue. The readers will help you gain insight into your life path, help you make decisions at a crossroads or help you set goals for your future. These warm and loving readers and intuitives are available by appointment by calling me at 503-318-8338. I’m happy to answer any questions you may have. I think you’ll be very happy you gave it a try.</p>
+        <p>Village Readers Collective is made up of talented and wonderful healers &amp; fortune tellers. The readers can be seen by appointment at our lovely little shop on SE 16th and Stark at 512 SE 16th Avenue. The readers will help you gain insight into your life path, help you make decisions at a crossroads or help you set goals for your future. These warm and loving readers and intuitives are available by appointment by calling me at 503-318-8338. I’m happy to answer any questions you may have. I think you’ll be very happy you gave it a try.</p>
       </div>
         <div class="col-md-3 team-left-top">
           <img src="images/rhonda1.jpg">
