--- a/business-consulting.html
+++ b/business-consulting.html
@@ -54,28 +54,33 @@
       <div class="team-gallery-top">
         <h3>Business Consulting</h3>
         <p>  If you’re thinking about building a business from the ground up or shaking up the business you already have, feel free to give me a call.  I will happily come and look at your plans or you can come to my office and we can discuss your goals.   I’d love to help you build the business of your dreams or make your existing business flourish.   And if you want to sell your existing business, let’s talk about that.  The services I can offer you are:</p>
-<!-- The p tag below is what Sheila wanted to caption the video -->
 </br>
-        <p>Concept Development</p>
-        <p>Location Scouting</p>
-        <p>City, Environmental Health, OLCC licensing & permits from start to finish</p>
-        <p>Color and Theme Design</p>
-        <p>Furniture and Equipment Procurement</p>
-        <p>Feng-shui for Success</p>
-        <p>Hiring and Training of Staff</p>
-        <p>Staff Team building</p>
-        <p>Public Relations</p>
-        <p>Making your business desirable to a perspective buyer</p>
-        <p>Lease Negotiations</p>
+      <ul>
+        <li>Concept Development</li>
+        <li>Location Scouting</li>
+        <li>City, Environmental Health, OLCC licensing &amp; permits from start to finish</p>
+        <li>Color and Theme Design</li>
+        <li>Furniture and Equipment Procurement</li>
+        <li>Feng-shui for Success</li>
+        <li>Hiring and Training of Staff</li>
+        <li>Staff Team building</li>
+        <li>Public Relations</li>
+        <li>Making your business desirable to a perspective buyer</li>
+        <li>Lease Negotiations</li>
+      </ul>
       </div>
       <div class="video">
        <iframe src="https://player.vimeo.com/video/38621491?title=0&amp;byline=0&amp;portrait=0" width="1100" height="619" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
       </div>
-      <div class="client-quote">
-      <!-- <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p> -->
-      <p>"Sheila. thank you so much for your opinions...  Working with you was very clarifying for our nearer-term strategy for our -----  property.  Being informed ...is very important knowledge and it is now obvious we need to move away from this concept to live more consistently with our intended life style preferences."</p>
-      <h3 id="client-sig">John &amp; Lisann</h3>
-    </div>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+        <div class="client-quote">
+            <!-- <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p> -->
+            <p>"Sheila. thank you so much for your opinions...  Working with you was very clarifying for our nearer-term strategy for our -----  property.  Being informed ...is very important knowledge and it is now obvious we need to move away from this concept to live more consistently with our intended life style preferences."</p>
+            <h3 id="client-sig">John &amp; Lisann</h3>
+        </div>
+        </div>
+      </div>
 
 <!-- Footer  ================================================== -->
     <footer>
