--- a/project-management.html
+++ b/project-management.html
@@ -51,32 +51,32 @@
         </div><!-- /.container-fluid -->
       </nav>
 <!--video-->
-    <div class="row" class="container">
+
       <div class="team-gallery-top">
         <h3>Project Management</h3>
         <h4>What I can do for you:</h4>
-          <p>I can take your dream to a reality. I will listen to your goals &amp; priorities and together we will come up with a visual for a the final results.</p>
-          <p>As your project manager I can do as much or as little of these duties as you'd like:</p>
-          <ul>
-            <li>hiring and managing of subcontractors</li>
-            <li>scheduling projects</li>
-            <li>monitoring construction progress</li>
-            <li>securing permits and meeting with inspectors</li>
-            <li>tracking work quality</li>
-            <li>ensuring safe work conditions</li>
-            <li>making sure contractors invoices are sent and they are paid on time to avoid any lien issues</li>
+          <p>I can take your dream to a reality. I will listen to your goals &amp; priorities. Together we will come up with a visual for the final results.</p></br>
+          <p>As your project manager I can do as many or as few  of these duties as you'd like:</p>
+          <ul class="list">
+            <li class="capitalize">hiring and managing of subcontractors</li>
+            <li class="capitalize">scheduling projects</li>
+            <li class="capitalize">monitoring construction progress</li>
+            <li class="capitalize">securing permits and meeting with inspectors</li>
+            <li class="capitalize">tracking work quality</li>
+            <li class="capitalize">ensuring safe work conditions</li>
+            <li class="capitalize">making sure contractors invoices are sent and they are paid on time to avoid any lien issues</li>
           </ul>
       </div>
 
 
-
-      <div class="client-quote">
-      <!-- <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p> -->
-      <p>"You are an AMAZING project manager and I will highly recommend you to anyone who asks! You have such incredible patience and attention to detail, care and concern for the project and the people involved, a wonderful array of contacts to work with, and are able to listen to and take in all of the many (and often quite nebulous and unformed) ideas and opinions of all concerned.  In short, dear Sheila, you are a treasure and I look forward to working with you again when we arrive [back in the States]. I already have a little list started. :-)"</p>
-      <h3 id="client-sig">Roberta (&amp; Jerry)</h3>
-      <h5>Currently living in Hong Kong, retiring to Portland</h5>
-    </div>
-</div>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 client-quote">
+          <!-- <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p> -->
+          <p>"You are an AMAZING project manager and <span class="standout-text">I will highly recommend you to anyone who asks!</span> You have such incredible patience and attention to detail, care and concern for the project and the people involved, a wonderful array of contacts to work with, and are able to listen to and take in all of the many (and often quite nebulous and unformed) ideas and opinions of all concerned.  In short, dear Sheila, you are a treasure and I look forward to working with you again when we arrive [back in the States]. I already have a little list started. :-)"</p>
+          <h3 id="client-sig">Roberta &amp; Jerry</h3>
+          <h5>Currently living in Hong Kong, retiring to Portland</h5>
+        </div>
+      </div>
 
   <!--video><div class="contact" id="contact">
     <iframe class="video" src="https://player.vimeo.com/video/38621491?title=0&amp;byline=0&amp;portrait=0" width="1100" height="619" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
