--- a/business-consulting.html
+++ b/business-consulting.html
@@ -44,7 +44,7 @@
               <li><a class="navListItem" href="about.html">About</a></li>
               <li><a class="navListItem" href="project-management.html">Project Management</a></li>
               <li><a class="navListItem selected" href="business-consulting.html">Business Consulting</a></li>
-              <li><a class="navListItem" href="village-readers.html">Village Readers</a></li>
+              <!-- <li><a class="navListItem" href="village-readers.html">Village Readers</a></li> -->
               <li><a class="navListItem" href="contact.html">Contact</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
@@ -53,8 +53,8 @@
 <!--video-->
       <div class="team-gallery-top">
         <h3>Business Consulting</h3>
-        <p>  If you’re thinking about building a business from the ground up or shaking up the business you already have, feel free to give me a call.  I will happily come and look at your plans or you can come to my office and we can discuss your goals.   I’d love to help you build the business of your dreams or make your existing business flourish.   And if you want to sell your existing business, let’s talk about that.</p></br>
-        <p>The services I can offer you are:</p>
+        <p>  If you’re thinking about building a business from the ground up or shaking up the business you already have, feel free to give me a call.  I will happily come and look at your plans or you can come to my office and we can discuss your goals.   I’d love to help you build the business of your dreams or make your existing business flourish.   And if you want to sell your existing business, let’s talk about that.</p>
+<!--         <p>The services I can offer you are:</p> -->
 </br>
       <ul class="list">
         <li>Concept Development</li>
@@ -77,7 +77,7 @@
         <div class="col-md-8 col-md-offset-2">
         <div class="client-quote">
             <!-- <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p> -->
-            <p>"Sheila. Thank you so much for your opinions...  Working with you was very clarifying for our nearer-term strategy for our -----  property.  Being informed ...is very important knowledge and it is now obvious we need to move away from this concept to live more consistently with our intended life style preferences."</p>
+            <!-- <p>"Sheila. Thank you so much for your opinions...  Working with you was very clarifying for our nearer-term strategy for our property.  Being informed ...is very important knowledge and it is now obvious we need to move away from this concept to live more consistently with our intended life style preferences."</p> -->
             <h3 id="client-sig">John &amp; Lisann</h3>
         </div>
         </div>
@@ -95,7 +95,7 @@
               <li><a class="footer-nav-li" href="about.html">About</a></li>
               <li><a class="footer-nav-li" href="project-management.html">Project Management</a></li>
               <li><a class="footer-nav-li" href="business-consulting.html">Business Consulting</a></li>
-              <li><a class="footer-nav-li" href="village-readers.html">Village Readers</a></li>
+              <!-- <li><a class="footer-nav-li" href="village-readers.html">Village Readers</a></li> -->
               <li><a class="footer-nav-li" href="contact.html">Contact</a></li>
             </ul>
             <p class="credits">&copy; 2015 Sheila Baraga</p>
