--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li><a class="navListItem" href="about.html">About</a></li>
               <li><a class="navListItem" href="project-management.html">Project Management</a></li>
               <li><a class="navListItem" href="business-consulting.html">Business Consulting</a></li>
-              <li><a class="navListItem" href="village-readers.html">Village Readers</a></li>
+              <!-- <li><a class="navListItem" href="village-readers.html">Village Readers</a></li> -->
               <li><a class="navListItem" href="contact.html">Contact</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
@@ -157,7 +157,7 @@
               <li><a class="footer-nav-li" href="about.html">About</a></li>
               <li><a class="footer-nav-li" href="project-management.html">Project Management</a></li>
               <li><a class="footer-nav-li" href="business-consulting.html">Business Consulting</a></li>
-              <li><a class="footer-nav-li" href="village-readers.html">Village Readers</a></li>
+              <!-- <li><a class="footer-nav-li" href="village-readers.html">Village Readers</a></li> -->
               <li><a class="footer-nav-li" href="contact.html">Contact</a></li>
             </ul>
             <p class="credits">&copy; 2015 Sheila Baraga</p>
