changed out sheila photo

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
       <div class="row" id="contact-row">
         <div class="col-md-10 col-md-offset-1">
           <div class="col-sm-4" id="about-pic">
-            <img id="sheila-pic" src="images/Sheila1.jpg">
+            <img id="sheila-pic" src="images/Sheilapic.jpg">
           </div>
           <div class="col-sm-8">
             <h1 id="contact-sig" class="about-sig">Sheila Baraga</h1>
