--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 <div class="row" id="about-row">
   <div class="col-md-10 col-md-offset-1">
     <div class="col-sm-4" id="about-pic">
-      <img id="sheila-pic-about" src="images/Sheila1.jpg">
+      <img id="sheila-pic-about" src="images/Sheilapic.jpg">
     </div>
     <div id="about-text" class="col-sm-8">
       <h1 class="about-sig">Sheila Blay Baraga</h1>
